Fix top tasks alignment in topics
https://www.pivotaltracker.com/story/show/61535532

--- a/app/assets/stylesheets/frontend/views/_topic.scss
+++ b/app/assets/stylesheets/frontend/views/_topic.scss
@@ -72,4 +72,8 @@
       @include ig-core-16;
     }
   }
+
+  .heading-extra {
+    margin-top: $gutter+$gutter-half;
+  }
 }
